Edit font awesome

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -22,16 +22,16 @@
           <h3>Student na Pravnom fakultetu</h3>
           <hr />
           <div class="class-info">
-            <p><i class="fas fa-pencil-alt"></i>
+            <p><i class="fa fa-pencil"></i>
              matematika</p>
             <p><span class="rounded lime">114</span>
              odrzanih casova</p>
-            <div>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
+            <div class="stars">
+              <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+              <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+              <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+              <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+              <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
             </div>
           </div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sed nam magnam possimus accusantium debitis temporibus excepturi tempore, tenetur at error sit itaque, atque quo aut aperiam doloribus maxime eveniet.</p>
@@ -49,7 +49,7 @@
                   <h2>Svi casovi <span class="rounded lime">3</span></h2>
                 </div>
                 <div class="right">
-                  <i class="fas fa-question-circle"></i> Pretraga
+                  <i class="fa fa-question-circle"></i> Pretraga
                   <input type="text" />
                 </div>
               </th>
@@ -110,7 +110,7 @@
             <tr>
               <th colspan="6">
                 <div class="left">
-                  <h2>Dostupnost predavaca <i class="fas fa-question-circle"></i></h2>
+                  <h2>Dostupnost predavaca <i class="fa fa-question-circle"></i></h2>
                 </div>
                 <div class="right">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit deleniti <span class="rounded lime">GMT+1</span> dolore</p>
@@ -150,11 +150,11 @@
               </td>
               <td>
                 <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
                 </div>
               </td>
               <td colspan="4">
@@ -172,11 +172,11 @@
               </td>
               <td>
                 <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
                 </div>
               </td>
               <td colspan="4">
@@ -194,11 +194,11 @@
               </td>
               <td>
                 <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fa fa-star" style="color: rgb(176, 221, 53);"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
                 </div>
               </td>
               <td colspan="4">
