--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>za studente pravnog fakulteta</p>
               </td>
               <td style="text-align: right; color: rgb(176, 221, 53)">
-                opis casa <i class="fas fa-chevron-down"></i>
+                opis casa <i class="fa fa-chevron-down"></i>
               </td>
               <td style="text-align: right;">
                 <p>1.000,00din/cas</p>
@@ -77,7 +77,7 @@
                 <p>za studente pravnog fakulteta</p>
               </td>
               <td style="text-align: right; color: rgb(176, 221, 53)">
-                opis casa <i class="fas fa-chevron-down"></i>
+                opis casa <i class="fa fa-chevron-down"></i>
               </td>
               <td style="text-align: right;">
                 <p>1.000,00din/cas</p>
@@ -92,7 +92,7 @@
                 <p>za studente pravnog fakulteta</p>
               </td>
               <td style="text-align: right; color: rgb(176, 221, 53)">
-                opis casa <i class="fas fa-chevron-down"></i>
+                opis casa <i class="fa fa-chevron-down"></i>
               </td>
               <td style="text-align: right;">
                 <p>2.500,00din/cas</p>
