--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </th>
               </tr>
             </thead>
-            <tbody></tbody>
+            <tbody id="weekBody"></tbody>
           </table>
         </section>
         <section id="comments">
